[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/art/interface/menu/menu.png" type="Texture" id=2]
[ext_resource path="res://src/interface/menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.152941, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 6 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=4]
size = 34
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 9
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.713726, 0.811765, 0.482353, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.996078, 0.588235, 0.184314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.713726, 0.811765, 0.482353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.611765, 0.752941, 0.517647, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.611765, 0.752941, 0.517647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.482353, 0.682353, 0.623529, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.482353, 0.682353, 0.623529, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Menu" type="Control"]
script = ExtResource( 3 )

[node name="spr_Menu" type="Sprite" parent="."]
position = Vector2( 403, 301 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_top = 354.0
margin_right = 264.0
margin_bottom = 470.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_start" type="Button" parent="VBoxContainer"]
margin_right = 242.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../btn_options")
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Start"

[node name="btn_load" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 242.0
margin_bottom = 98.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Load"

[node name="btn_options" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 242.0
margin_bottom = 149.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Options"

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_load" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_options" to="." method="_on_btn_options_pressed"]
